--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <button onclick="exportLog()" style="float: right;">Export Log</button>
 
         <label for="hoursWorked">Hours Worked (in hours or hh:mm):</label>
-        <input type="text" id="hoursWorked" placeholder=" הזן שעות כמו 10:42 או 2:51">
+        <input type="text" id="hoursWorked" placeholder=" הכנס שעות כמו 10:42 או 2:51">
 
         <button onclick="calculateDay('normal')">Add Normal Day</button>
         <button onclick="calculateDay('holiday')">Add Holiday/Shabbat</button>
